ecs-service-ec2/load_balancer.tf
resource "aws_lb_listener_rule" "main" {
  listener_arn = var.lb_arn

  action {
    type             = "forward"
    target_group_arn = aws_alb_target_group.main.arn
  }

  condition {
    host_header {
      values = [var.app_hostname]
    }
  }
}
